update access control & role & toggle active
